--- a/contact.css
+++ b/contact.css
@@ -10,20 +10,26 @@ form{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0);
     justify-content: center;
     row-gap: 1vw;
     border-radius: 15px;
-    padding: 1%;
+    padding: 2%;
     font-size: 2rem;
+    width: 40%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    border: 2px solid rgb(59, 188, 235);
+    -webkit-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    -moz-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
 }
 
 form>input{
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0.4) 0%, rgba(87,22,125,0.4) 32%, rgba(0,0,0,0.4) 100%);
+    background-color: rgb(20, 20, 20);
     text-shadow: none;
     box-shadow: none;
-    border: 1px solid rgb(117, 43, 124);
+    border: 1px solid #fff;
     text-align: center;
     font-size: 1.3rem;
     color: #fff;
@@ -31,11 +37,10 @@ form>input{
 }
 
 form>textarea{
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0.4) 0%, rgba(87,22,125,0.4) 32%, rgba(0,0,0,0.4) 100%);
+    background: rgb(20, 20, 20);
     text-shadow: none;
     box-shadow: none;
-    border: 1px solid rgb(117, 43, 124);
+    border: 1px solid #fff;
     text-align: center;
     font-size: 1.3rem;
     color: #fff;
@@ -44,9 +49,9 @@ form>textarea{
 }
 
 form>button{
-    background: linear-gradient(90deg, rgba(2,0,36,0.4) 0%, rgba(87,22,125,0.4) 32%, rgba(0,0,0,0.4) 100%);
+    background-color: rgb(20, 20, 20);
     padding: 2%;
-    border: 1px solid rgb(117, 43, 124);
+    border: 1px solid #fff;
     color: #fff;
     font-weight: bold;
     border-radius: 10px;
@@ -56,9 +61,14 @@ main>.social-medias{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(59, 188, 235);
+    -webkit-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    -moz-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
     padding: 1%;
     border-radius: 10px;
+    margin-top: 2%;
 }
 
 .social-medias>p{
