--- a/most_popular.css
+++ b/most_popular.css
@@ -12,6 +12,10 @@ main{
     border-radius: 15px;
     padding: 1%;
     margin-bottom: 2%;
+    border: 2px solid rgb(59, 188, 235);
+    -webkit-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    -moz-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
 }
 
 .artist-info{
@@ -21,6 +25,7 @@ main{
 .artist-info>img{
     border-radius: 15px;
     width: 80%;
+    border: 1px solid rgb(59, 188, 235);
 }
 
 .artist-music{
@@ -33,13 +38,14 @@ main{
     justify-content: space-between;
     padding: 0.5%;
     margin: 2%;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0.4) 0%, rgba(87,22,125,0.4) 32%, rgba(0,0,0,0.4) 100%);
+    background: rgb(20,20,20);
+    /* background: linear-gradient(90deg, rgba(0,0,0,1) 4%, rgba(42,42,42,1) 56%, rgba(30,30,30,1) 75%, rgba(0,0,0,1) 100%); */
     border-radius: 15px;
     transition: ease-in-out 0.2s;
     transition: all 0.2s;
-    border: 1px rgba(84, 7, 136, 0.4) solid;
-    font-size: 1.5rem;
+    /* border: 1px rgba(84, 7, 136, 0.4) solid; */
+    /* border: 2px solid rgb(59, 188, 235); */
+    font-size: 1.2rem;
 }
 
 .music:hover{
@@ -55,10 +61,6 @@ background: linear-gradient(90deg, rgba(9,7,34,1) 0%, rgba(38,17,51,1) 49%, rgba
     border-radius: 15px;
 }
 
-.music>p:nth-child(3){
-    color: rgb(144, 144, 144);
-}
-
 main>h1{
     margin-bottom: 2%;
     flex-basis: 100%;
@@ -67,8 +69,13 @@ main>h1{
 .artist-popular>a{
     /* font-size: 1rem; */
     padding: 1%;
-    text-align: end;
-    flex-basis: 100%;
+    text-align: end;    
+    transition: all 0.3s;
+    margin-left: 80%;
+}
+
+.artist-popular>a:hover{
+    transform: scale(1.1);
 }
 
 @media(max-width: 800px){
