--- a/playlists.css
+++ b/playlists.css
@@ -11,8 +11,12 @@ main{
 }
 
 .playlist{
-    background-color: rgba(20, 31, 65, 0.4);
+    background-color: rgb(0, 0, 0);
     border-radius: 15px;
+    border: 1px solid rgb(59, 188, 235);
+    -webkit-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    -moz-box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
+    box-shadow: 4px 15px 53px -13px rgba(58, 188, 235, 1);
     flex-basis: 70%;
     padding: 1%;
     margin: 2%;
@@ -24,28 +28,22 @@ main{
     justify-content: space-between;
     padding: 0.5%;
     margin: 2%;
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0.4) 0%, rgba(87,22,125,0.4) 32%, rgba(0,0,0,0.4) 100%);
+    background: rgb(20,20,20);
     border-radius: 15px;
     transition: ease-in-out 0.2s;
     transition: all 0.2s;
-    border: 1px rgba(84, 7, 136, 0.4) solid;
 }
 
 .music:hover{
-    /* background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(87,22,125,1) 32%, rgba(0,0,0,1) 100%); */
     font-size: 90%;
-    background: rgb(9,7,34);
-background: linear-gradient(90deg, rgba(9,7,34,1) 0%, rgba(38,17,51,1) 49%, rgba(0,0,0,1) 100%);
 }
 
 .playlist-info>input{
-    background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,0.4) 0%, rgba(87,22,125,0.4) 32%, rgba(0,0,0,0.4) 100%);
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 4%, rgba(42,42,42,1) 56%, rgba(30,30,30,1) 75%, rgba(0,0,0,1) 100%);
     text-shadow: none;
     box-shadow: none;
-    border: 1px solid rgb(117, 43, 124);
+    border: 1px solid rgb(255, 255, 255);
     text-align: center;
     font-size: 1.3rem;
     color: #fff;
